--- a/neu2/views/delete_notification.pug
+++ b/neu2/views/delete_notification.pug
@@ -10,21 +10,11 @@ block content
       i.bi.bi-camera.me-3
       button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
-
-  h3 Welcome to the #{title}
-  br
-  br 
-  // adapter from https://getbootstrap.com/docs/4.0/components/forms/#horizontal-form
-  .container
-    .row.justify-content-md-center
-      form(action="/delete/deletepoi" method="delete")
-        fieldset
-          .form-group.row.mb-1
-            label.col-sm-2.col-form-label(for="poiname") Enter POI Name you want to totally destroy once and for all.
-            .col-sm-6
-              input#poiname.form-control(type="text" name="pname" placeholder="Enter POI Name")
-          .form-group.row.mb-1
-           button.btn.btn-primary.mb-2(type="submit") Send
+  .container-fluid
+    p The element 
+      code
+        #{JSON.stringify(newpoi)} 
+    p has been removed from the database 
 
 block foot 
   footer
