welcome to willkommen

--- a/neu2/views/display_notification.pug
+++ b/neu2/views/display_notification.pug
@@ -10,16 +10,7 @@ block content
       i.bi.bi-camera.me-3
       button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarCollapse' aria-controls='navbarCollapse' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
-
-  h3 Welcome to the #{title}, imagine a nice map here
-  br
-  br 
-  // adapter from https://getbootstrap.com/docs/4.0/components/forms/#horizontal-form
-  .container
-    .row.justify-content-md-center
-      form(action="/display/displaypoi" method="get")
-        fieldset
-        
+  .container-fluid
 
 block foot 
   footer
